<resources>
    <string name="app_name">ToDoApp</string>
    <string name="add_hint">Add New Task…</string>
    <string name="add">Add</string>
    <string name="good_morning">Good morning</string>
    <string name="daily_tasks">Daily Tasks</string>
    <string name="add_task_desc">Add task</string>
    <string name="save_task">Save task</string>
    <string name="delete_all_tasks">Delete all tasks</string>
    <string name="new_task">New task</string>
    <string name="task_time_format"> \u2022 %1$s</string>
</resources>